Revert "V0.40.18 (#36)"
This reverts commit 221e7d4aeef20bc7ad707d04627554a413ca5899.