@@ -15,11 +15,9 @@ import static io.airbyte.db.instance.configs.jooq.generated.Tables.CONNECTION_OP
 import static io.airbyte.db.instance.configs.jooq.generated.Tables.OPERATION;
 import static io.airbyte.db.instance.configs.jooq.generated.Tables.WORKSPACE;
 import static org.jooq.impl.DSL.asterisk;
-import static org.jooq.impl.DSL.groupConcat;
 import static org.jooq.impl.DSL.noCondition;
-import static org.jooq.impl.DSL.select;
 
-import com.google.common.annotations.VisibleForTesting;
+import com.fasterxml.jackson.databind.JsonNode;
 import com.google.common.base.Charsets;
 import com.google.common.collect.Sets;
 import com.google.common.hash.HashFunction;
@@ -28,11 +26,10 @@ import io.airbyte.commons.json.Jsons;
 import io.airbyte.commons.lang.MoreBooleans;
 import io.airbyte.commons.version.AirbyteProtocolVersion;
 import io.airbyte.config.ActorCatalog;
-import io.airbyte.config.ActorCatalogFetchEvent;
+import io.airbyte.config.AirbyteConfig;
 import io.airbyte.config.ConfigSchema;
 import io.airbyte.config.DestinationConnection;
 import io.airbyte.config.DestinationOAuthParameter;
-import io.airbyte.config.Geography;
 import io.airbyte.config.SourceConnection;
 import io.airbyte.config.SourceOAuthParameter;
 import io.airbyte.config.StandardDestinationDefinition;
@@ -57,8 +54,6 @@ import io.airbyte.validation.json.JsonValidationException;
 import java.io.IOException;
 import java.time.OffsetDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -68,6 +63,7 @@ import java.util.Set;
 import java.util.UUID;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.apache.commons.lang3.ArrayUtils;
 import org.jooq.Condition;
 import org.jooq.DSLContext;
@@ -86,22 +82,17 @@ import org.slf4j.LoggerFactory;
 public class ConfigRepository {
 
   private static final Logger LOGGER = LoggerFactory.getLogger(ConfigRepository.class);
-  private static final String OPERATION_IDS_AGG_FIELD = "operation_ids_agg";
-  private static final String OPERATION_IDS_AGG_DELIMITER = ",";
 
   private final ConfigPersistence persistence;
   private final ExceptionWrappingDatabase database;
-  private final ActorDefinitionMigrator actorDefinitionMigrator;
 
-  public ConfigRepository(final Database database) {
-    this(DatabaseConfigPersistence.createWithValidation(database), database, new ActorDefinitionMigrator(new ExceptionWrappingDatabase(database)));
-  }
-
-  @VisibleForTesting
-  ConfigRepository(final ConfigPersistence persistence, final Database database, final ActorDefinitionMigrator actorDefinitionMigrator) {
+  public ConfigRepository(final ConfigPersistence persistence, final Database database) {
     this.persistence = persistence;
     this.database = new ExceptionWrappingDatabase(database);
-    this.actorDefinitionMigrator = actorDefinitionMigrator;
+  }
+
+  public ConfigPersistence getConfigPersistence() {
+    return persistence;
   }
 
   /**
@@ -121,7 +112,7 @@ public class ConfigRepository {
     return true;
   }
 
-  public StandardWorkspace getStandardWorkspaceNoSecrets(final UUID workspaceId, final boolean includeTombstone)
+  public StandardWorkspace getStandardWorkspace(final UUID workspaceId, final boolean includeTombstone)
       throws JsonValidationException, IOException, ConfigNotFoundException {
     final StandardWorkspace workspace = persistence.getConfig(ConfigSchema.STANDARD_WORKSPACE, workspaceId.toString(), StandardWorkspace.class);
 
@@ -144,7 +135,10 @@ public class ConfigRepository {
           .where(WORKSPACE.SLUG.eq(slug)).andNot(WORKSPACE.TOMBSTONE)).fetch();
     }
 
-    return result.stream().findFirst().map(DbConverter::buildStandardWorkspace);
+    if (result.size() == 0) {
+      return Optional.empty();
+    }
+    return Optional.of(DbConverter.buildStandardWorkspace(result.get(0)));
   }
 
   public StandardWorkspace getWorkspaceBySlug(final String slug, final boolean includeTombstone)
@@ -165,21 +159,12 @@ public class ConfigRepository {
     return workspaces;
   }
 
-  /**
-   * MUST NOT ACCEPT SECRETS - Should only be called from { @link SecretsRepositoryWriter }
-   *
-   * Write a StandardWorkspace to the database.
-   *
-   * @param workspace - The configuration of the workspace
-   * @throws JsonValidationException - throws is the workspace is invalid
-   * @throws IOException - you never know when you IO
-   */
-  public void writeStandardWorkspaceNoSecrets(final StandardWorkspace workspace) throws JsonValidationException, IOException {
+  public void writeStandardWorkspace(final StandardWorkspace workspace) throws JsonValidationException, IOException {
     persistence.writeConfig(ConfigSchema.STANDARD_WORKSPACE, workspace.getWorkspaceId().toString(), workspace);
   }
 
   public void setFeedback(final UUID workflowId) throws JsonValidationException, ConfigNotFoundException, IOException {
-    final StandardWorkspace workspace = getStandardWorkspaceNoSecrets(workflowId, false);
+    final StandardWorkspace workspace = getStandardWorkspace(workflowId, false);
 
     workspace.setFeedbackDone(true);
 
@@ -189,16 +174,10 @@ public class ConfigRepository {
   public StandardSourceDefinition getStandardSourceDefinition(final UUID sourceDefinitionId)
       throws JsonValidationException, IOException, ConfigNotFoundException {
 
-    final StandardSourceDefinition sourceDef = persistence.getConfig(
+    return persistence.getConfig(
         ConfigSchema.STANDARD_SOURCE_DEFINITION,
         sourceDefinitionId.toString(),
         StandardSourceDefinition.class);
-    // Make sure we have a default version of the Protocol.
-    // This corner case may happen for connectors that haven't been upgraded since we added versioning.
-    if (sourceDef != null) {
-      return sourceDef.withProtocolVersion(AirbyteProtocolVersion.getWithDefault(sourceDef.getProtocolVersion()).serialize());
-    }
-    return null;
   }
 
   public StandardSourceDefinition getSourceDefinitionFromSource(final UUID sourceId) {
@@ -223,7 +202,7 @@ public class ConfigRepository {
     try {
       final StandardSync sync = getStandardSync(connectionId);
       final SourceConnection source = getSourceConnection(sync.getSourceId());
-      return getStandardWorkspaceNoSecrets(source.getWorkspaceId(), isTombstone);
+      return getStandardWorkspace(source.getWorkspaceId(), isTombstone);
     } catch (final Exception e) {
       throw new RuntimeException(e);
     }
@@ -307,15 +286,8 @@ public class ConfigRepository {
 
   public StandardDestinationDefinition getStandardDestinationDefinition(final UUID destinationDefinitionId)
       throws JsonValidationException, IOException, ConfigNotFoundException {
-    final StandardDestinationDefinition destDef =
-        persistence.getConfig(ConfigSchema.STANDARD_DESTINATION_DEFINITION, destinationDefinitionId.toString(),
-            StandardDestinationDefinition.class);
-    // Make sure we have a default version of the Protocol.
-    // This corner case may happen for connectors that haven't been upgraded since we added versioning.
-    if (destDef != null) {
-      return destDef.withProtocolVersion(AirbyteProtocolVersion.getWithDefault(destDef.getProtocolVersion()).serialize());
-    }
-    return null;
+    return persistence.getConfig(ConfigSchema.STANDARD_DESTINATION_DEFINITION, destinationDefinitionId.toString(),
+        StandardDestinationDefinition.class);
   }
 
   public StandardDestinationDefinition getDestinationDefinitionFromDestination(final UUID destinationId) {
@@ -579,16 +551,6 @@ public class ConfigRepository {
     persistence.writeConfig(ConfigSchema.SOURCE_CONNECTION, partialSource.getSourceId().toString(), partialSource);
   }
 
-  public boolean deleteSource(final UUID sourceId) throws JsonValidationException, ConfigNotFoundException, IOException {
-    try {
-      getSourceConnection(sourceId);
-      persistence.deleteConfig(ConfigSchema.SOURCE_CONNECTION, sourceId.toString());
-      return true;
-    } catch (final ConfigNotFoundException e) {
-      return false;
-    }
-  }
-
   /**
    * Returns all sources in the database. Does not contain secrets. To hydrate with secrets see
    * { @link SecretsRepositoryReader#listSourceConnectionWithSecrets() }.
@@ -599,23 +561,6 @@ public class ConfigRepository {
    */
   public List<SourceConnection> listSourceConnection() throws JsonValidationException, IOException {
     return persistence.listConfigs(ConfigSchema.SOURCE_CONNECTION, SourceConnection.class);
-  }
-
-  /**
-   * Returns all sources for a workspace. Does not contain secrets.
-   *
-   * @param workspaceId - id of the workspace
-   * @return sources
-   * @throws JsonValidationException - throws if returned sources are invalid
-   * @throws IOException - you never know when you IO
-   */
-  public List<SourceConnection> listWorkspaceSourceConnection(final UUID workspaceId) throws IOException {
-    final Result<Record> result = database.query(ctx -> ctx.select(asterisk())
-        .from(ACTOR)
-        .where(ACTOR.ACTOR_TYPE.eq(ActorType.source))
-        .and(ACTOR.WORKSPACE_ID.eq(workspaceId))
-        .andNot(ACTOR.TOMBSTONE).fetch());
-    return result.stream().map(DbConverter::buildSourceConnection).collect(Collectors.toList());
   }
 
   /**
@@ -648,16 +593,6 @@ public class ConfigRepository {
     persistence.writeConfig(ConfigSchema.DESTINATION_CONNECTION, partialDestination.getDestinationId().toString(), partialDestination);
   }
 
-  public boolean deleteDestination(final UUID destId) throws JsonValidationException, ConfigNotFoundException, IOException {
-    try {
-      getDestinationConnection(destId);
-      persistence.deleteConfig(ConfigSchema.DESTINATION_CONNECTION, destId.toString());
-      return true;
-    } catch (final ConfigNotFoundException e) {
-      return false;
-    }
-  }
-
   /**
    * Returns all destinations in the database. Does not contain secrets. To hydrate with secrets see
    * { @link SecretsRepositoryReader#listDestinationConnectionWithSecrets() }.
@@ -670,54 +605,6 @@ public class ConfigRepository {
     return persistence.listConfigs(ConfigSchema.DESTINATION_CONNECTION, DestinationConnection.class);
   }
 
-  /**
-   * Returns all destinations for a workspace. Does not contain secrets.
-   *
-   * @param workspaceId - id of the workspace
-   * @return destinations
-   * @throws IOException - you never know when you IO
-   */
-  public List<DestinationConnection> listWorkspaceDestinationConnection(final UUID workspaceId) throws IOException {
-    final Result<Record> result = database.query(ctx -> ctx.select(asterisk())
-        .from(ACTOR)
-        .where(ACTOR.ACTOR_TYPE.eq(ActorType.destination))
-        .and(ACTOR.WORKSPACE_ID.eq(workspaceId))
-        .andNot(ACTOR.TOMBSTONE).fetch());
-    return result.stream().map(DbConverter::buildDestinationConnection).collect(Collectors.toList());
-  }
-
-  /**
-   * Returns all active sources using a definition
-   *
-   * @param definitionId - id for the definition
-   * @return sources
-   * @throws IOException
-   */
-  public List<SourceConnection> listSourcesForDefinition(final UUID definitionId) throws IOException {
-    final Result<Record> result = database.query(ctx -> ctx.select(asterisk())
-        .from(ACTOR)
-        .where(ACTOR.ACTOR_TYPE.eq(ActorType.source))
-        .and(ACTOR.ACTOR_DEFINITION_ID.eq(definitionId))
-        .andNot(ACTOR.TOMBSTONE).fetch());
-    return result.stream().map(DbConverter::buildSourceConnection).collect(Collectors.toList());
-  }
-
-  /**
-   * Returns all active destinations using a definition
-   *
-   * @param definitionId - id for the definition
-   * @return destinations
-   * @throws IOException
-   */
-  public List<DestinationConnection> listDestinationsForDefinition(final UUID definitionId) throws IOException {
-    final Result<Record> result = database.query(ctx -> ctx.select(asterisk())
-        .from(ACTOR)
-        .where(ACTOR.ACTOR_TYPE.eq(ActorType.destination))
-        .and(ACTOR.ACTOR_DEFINITION_ID.eq(definitionId))
-        .andNot(ACTOR.TOMBSTONE).fetch());
-    return result.stream().map(DbConverter::buildDestinationConnection).collect(Collectors.toList());
-  }
-
   public StandardSync getStandardSync(final UUID connectionId) throws JsonValidationException, IOException, ConfigNotFoundException {
     return persistence.getConfig(ConfigSchema.STANDARD_SYNC, connectionId.toString(), StandardSync.class);
   }
@@ -726,73 +613,43 @@ public class ConfigRepository {
     persistence.writeConfig(ConfigSchema.STANDARD_SYNC, standardSync.getConnectionId().toString(), standardSync);
   }
 
-  public List<StandardSync> listStandardSyncs() throws IOException, JsonValidationException {
+  public List<StandardSync> listStandardSyncs() throws ConfigNotFoundException, IOException, JsonValidationException {
     return persistence.listConfigs(ConfigSchema.STANDARD_SYNC, StandardSync.class);
   }
 
   public List<StandardSync> listStandardSyncsUsingOperation(final UUID operationId)
       throws IOException {
-
-    final Result<Record> connectionAndOperationIdsResult = database.query(ctx -> ctx
-        // SELECT connection.* plus the connection's associated operationIds as a concatenated list
-        .select(
-            CONNECTION.asterisk(),
-            groupConcat(CONNECTION_OPERATION.OPERATION_ID).separator(OPERATION_IDS_AGG_DELIMITER).as(OPERATION_IDS_AGG_FIELD))
+    final Result<Record> result = database.query(ctx -> ctx.select(CONNECTION.asterisk())
         .from(CONNECTION)
-
-        // inner join with all connection_operation rows that match the connection's id
-        .join(CONNECTION_OPERATION).on(CONNECTION_OPERATION.CONNECTION_ID.eq(CONNECTION.ID))
-
-        // only keep rows for connections that have an operationId that matches the input.
-        // needs to be a sub query because we want to keep all operationIds for matching connections
-        // in the main query
-        .where(CONNECTION.ID.in(
-            select(CONNECTION.ID).from(CONNECTION).join(CONNECTION_OPERATION).on(CONNECTION_OPERATION.CONNECTION_ID.eq(CONNECTION.ID))
-                .where(CONNECTION_OPERATION.OPERATION_ID.eq(operationId))))
-
-        // group by connection.id so that the groupConcat above works
-        .groupBy(CONNECTION.ID)).fetch();
-
-    return getStandardSyncsFromResult(connectionAndOperationIdsResult);
+        .join(CONNECTION_OPERATION)
+        .on(CONNECTION_OPERATION.CONNECTION_ID.eq(CONNECTION.ID))
+        .where(CONNECTION_OPERATION.OPERATION_ID.eq(operationId))).fetch();
+    return getStandardSyncsFromResult(result);
   }
 
   public List<StandardSync> listWorkspaceStandardSyncs(final UUID workspaceId, final boolean includeDeleted) throws IOException {
-    final Result<Record> connectionAndOperationIdsResult = database.query(ctx -> ctx
-        // SELECT connection.* plus the connection's associated operationIds as a concatenated list
-        .select(
-            CONNECTION.asterisk(),
-            groupConcat(CONNECTION_OPERATION.OPERATION_ID).separator(OPERATION_IDS_AGG_DELIMITER).as(OPERATION_IDS_AGG_FIELD))
+    final Result<Record> result = database.query(ctx -> ctx.select(CONNECTION.asterisk())
         .from(CONNECTION)
-
-        // left join with all connection_operation rows that match the connection's id.
-        // left join includes connections that don't have any connection_operations
-        .leftJoin(CONNECTION_OPERATION).on(CONNECTION_OPERATION.CONNECTION_ID.eq(CONNECTION.ID))
-
-        // join with source actors so that we can filter by workspaceId
         .join(ACTOR).on(CONNECTION.SOURCE_ID.eq(ACTOR.ID))
         .where(ACTOR.WORKSPACE_ID.eq(workspaceId)
-            .and(includeDeleted ? noCondition() : CONNECTION.STATUS.notEqual(StatusType.deprecated)))
-
-        // group by connection.id so that the groupConcat above works
-        .groupBy(CONNECTION.ID)).fetch();
-
-    return getStandardSyncsFromResult(connectionAndOperationIdsResult);
+            .and(includeDeleted ? noCondition() : CONNECTION.STATUS.notEqual(StatusType.deprecated))))
+        .fetch();
+    return getStandardSyncsFromResult(result);
   }
 
-  private List<StandardSync> getStandardSyncsFromResult(final Result<Record> connectionAndOperationIdsResult) {
+  private List<StandardSync> getStandardSyncsFromResult(final Result<Record> result) throws IOException {
     final List<StandardSync> standardSyncs = new ArrayList<>();
+    for (final Record record : result) {
+      final UUID connectionId = record.get(CONNECTION.ID);
+      final Result<Record> connectionOperationRecords = database.query(ctx -> ctx.select(asterisk())
+          .from(CONNECTION_OPERATION)
+          .where(CONNECTION_OPERATION.CONNECTION_ID.eq(connectionId))
+          .fetch());
 
-    for (final Record record : connectionAndOperationIdsResult) {
-      final String operationIdsFromRecord = record.get(OPERATION_IDS_AGG_FIELD, String.class);
-
-      // can be null when connection has no connectionOperations
-      final List<UUID> operationIds = operationIdsFromRecord == null
-          ? Collections.emptyList()
-          : Arrays.stream(operationIdsFromRecord.split(OPERATION_IDS_AGG_DELIMITER)).map(UUID::fromString).toList();
-
-      standardSyncs.add(DbConverter.buildStandardSync(record, operationIds));
+      final List<UUID> connectionOperationIds =
+          connectionOperationRecords.stream().map(r -> r.get(CONNECTION_OPERATION.OPERATION_ID)).collect(Collectors.toList());
+      standardSyncs.add(DbConverter.buildStandardSync(record, connectionOperationIds));
     }
-
     return standardSyncs;
   }
 
@@ -871,7 +728,10 @@ public class ConfigRepository {
           ACTOR_OAUTH_PARAMETER.ACTOR_DEFINITION_ID.eq(sourceDefinitionId)).fetch();
     });
 
-    return result.stream().findFirst().map(DbConverter::buildSourceOAuthParameter);
+    if (result.size() == 0) {
+      return Optional.empty();
+    }
+    return Optional.of(DbConverter.buildSourceOAuthParameter(result.get(0)));
   }
 
   public void writeSourceOAuthParam(final SourceOAuthParameter sourceOAuthParameter) throws JsonValidationException, IOException {
@@ -897,7 +757,10 @@ public class ConfigRepository {
           ACTOR_OAUTH_PARAMETER.ACTOR_DEFINITION_ID.eq(destinationDefinitionId)).fetch();
     });
 
-    return result.stream().findFirst().map(DbConverter::buildDestinationOAuthParameter);
+    if (result.size() == 0) {
+      return Optional.empty();
+    }
+    return Optional.of(DbConverter.buildDestinationOAuthParameter(result.get(0)));
   }
 
   public void writeDestinationOAuthParam(final DestinationOAuthParameter destinationOAuthParameter) throws JsonValidationException, IOException {
@@ -935,79 +798,10 @@ public class ConfigRepository {
     return result;
   }
 
-  /**
-   * Updates the database with the most up-to-date source and destination definitions in the connector
-   * catalog.
-   *
-   * @param seedSourceDefs - most up-to-date source definitions
-   * @param seedDestDefs - most up-to-date destination definitions
-   * @throws IOException - throws if exception when interacting with db
-   */
-  public void seedActorDefinitions(final List<StandardSourceDefinition> seedSourceDefs, final List<StandardDestinationDefinition> seedDestDefs)
-      throws IOException {
-    actorDefinitionMigrator.migrate(seedSourceDefs, seedDestDefs);
-  }
-
-  // Data-carrier records to hold combined result of query for a Source or Destination and its
-  // corresponding Definition. This enables the API layer to
-  // process combined information about a Source/Destination/Definition pair without requiring two
-  // separate queries and in-memory join operation,
-  // because the config models are grouped immediately in the repository layer.
-  @VisibleForTesting
-  public record SourceAndDefinition(SourceConnection source, StandardSourceDefinition definition) {
-
-  }
-
-  @VisibleForTesting
-  public record DestinationAndDefinition(DestinationConnection destination, StandardDestinationDefinition definition) {
-
-  }
-
-  public List<SourceAndDefinition> getSourceAndDefinitionsFromSourceIds(final List<UUID> sourceIds) throws IOException {
-    final Result<Record> records = database.query(ctx -> ctx
-        .select(ACTOR.asterisk(), ACTOR_DEFINITION.asterisk())
-        .from(ACTOR)
-        .join(ACTOR_DEFINITION)
-        .on(ACTOR.ACTOR_DEFINITION_ID.eq(ACTOR_DEFINITION.ID))
-        .where(ACTOR.ACTOR_TYPE.eq(ActorType.source), ACTOR.ID.in(sourceIds))
-        .fetch());
-
-    final List<SourceAndDefinition> sourceAndDefinitions = new ArrayList<>();
-
-    for (final Record record : records) {
-      final SourceConnection source = DbConverter.buildSourceConnection(record);
-      final StandardSourceDefinition definition = DbConverter.buildStandardSourceDefinition(record);
-      sourceAndDefinitions.add(new SourceAndDefinition(source, definition));
-    }
-
-    return sourceAndDefinitions;
-  }
-
-  public List<DestinationAndDefinition> getDestinationAndDefinitionsFromDestinationIds(final List<UUID> destinationIds) throws IOException {
-    final Result<Record> records = database.query(ctx -> ctx
-        .select(ACTOR.asterisk(), ACTOR_DEFINITION.asterisk())
-        .from(ACTOR)
-        .join(ACTOR_DEFINITION)
-        .on(ACTOR.ACTOR_DEFINITION_ID.eq(ACTOR_DEFINITION.ID))
-        .where(ACTOR.ACTOR_TYPE.eq(ActorType.destination), ACTOR.ID.in(destinationIds))
-        .fetch());
-
-    final List<DestinationAndDefinition> destinationAndDefinitions = new ArrayList<>();
-
-    for (final Record record : records) {
-      final DestinationConnection destination = DbConverter.buildDestinationConnection(record);
-      final StandardDestinationDefinition definition = DbConverter.buildStandardDestinationDefinition(record);
-      destinationAndDefinitions.add(new DestinationAndDefinition(destination, definition));
-    }
-
-    return destinationAndDefinitions;
-  }
-
   public ActorCatalog getActorCatalogById(final UUID actorCatalogId)
       throws IOException, ConfigNotFoundException {
     final Result<Record> result = database.query(ctx -> ctx.select(ACTOR_CATALOG.asterisk())
         .from(ACTOR_CATALOG).where(ACTOR_CATALOG.ID.eq(actorCatalogId))).fetch();
-
     if (result.size() > 0) {
       return DbConverter.buildActorCatalog(result.get(0));
     }
@@ -1025,8 +819,8 @@ public class ConfigRepository {
    * @return the db identifier for the cached catalog.
    */
   private UUID getOrInsertActorCatalog(final AirbyteCatalog airbyteCatalog,
-                                       final DSLContext context,
-                                       final OffsetDateTime timestamp) {
+                                       final DSLContext context) {
+    final OffsetDateTime timestamp = OffsetDateTime.now();
     final HashFunction hashFunction = Hashing.murmur3_32_fixed();
     final String catalogHash = hashFunction.hashBytes(Jsons.serialize(airbyteCatalog).getBytes(
         Charsets.UTF_8)).toString();
@@ -1060,33 +854,11 @@ public class ConfigRepository {
         .and(ACTOR_CATALOG_FETCH_EVENT.CONFIG_HASH.eq(configHash))
         .orderBy(ACTOR_CATALOG_FETCH_EVENT.CREATED_AT.desc()).limit(1)).fetch();
 
-    return records.stream().findFirst().map(DbConverter::buildActorCatalog);
-  }
+    if (records.size() >= 1) {
+      return Optional.of(DbConverter.buildActorCatalog(records.get(0)));
+    }
+    return Optional.empty();
 
-  public Optional<ActorCatalogFetchEvent> getMostRecentActorCatalogFetchEventForSource(final UUID sourceId) throws IOException {
-
-    final Result<Record> records = database.query(ctx -> ctx.select(ACTOR_CATALOG_FETCH_EVENT.asterisk())
-        .from(ACTOR_CATALOG_FETCH_EVENT)
-        .where(ACTOR_CATALOG_FETCH_EVENT.ACTOR_ID.eq(sourceId))
-        .orderBy(ACTOR_CATALOG_FETCH_EVENT.CREATED_AT.desc()).limit(1).fetch());
-
-    return records.stream().findFirst().map(DbConverter::buildActorCatalogFetchEvent);
-  }
-
-  public Map<UUID, ActorCatalogFetchEvent> getMostRecentActorCatalogFetchEventForSources(final List<UUID> sourceIds)
-      throws IOException {
-
-    return database.query(ctx -> ctx.fetch(
-        """
-        select actor_catalog_id, actor_id, created_at from
-          (select actor_catalog_id, actor_id, created_at, rank() over (partition by actor_id order by created_at desc) as creation_order_rank
-          from public.actor_catalog_fetch_event
-          ) table_with_rank
-        where creation_order_rank = 1;
-        """))
-        .stream().map(DbConverter::buildActorCatalogFetchEvent)
-        .collect(Collectors.toMap(record -> record.getActorId(),
-            record -> record));
   }
 
   /**
@@ -1114,7 +886,7 @@ public class ConfigRepository {
     final OffsetDateTime timestamp = OffsetDateTime.now();
     final UUID fetchEventID = UUID.randomUUID();
     return database.transaction(ctx -> {
-      final UUID catalogId = getOrInsertActorCatalog(catalog, ctx, timestamp);
+      final UUID catalogId = getOrInsertActorCatalog(catalog, ctx);
       ctx.insertInto(ACTOR_CATALOG_FETCH_EVENT)
           .set(ACTOR_CATALOG_FETCH_EVENT.ID, fetchEventID)
           .set(ACTOR_CATALOG_FETCH_EVENT.ACTOR_ID, actorId)
@@ -1150,6 +922,46 @@ public class ConfigRepository {
         .where(ACTOR.WORKSPACE_ID.equal(workspaceId))
         .and(ACTOR.ACTOR_TYPE.eq(ActorType.destination))
         .andNot(ACTOR.TOMBSTONE)).fetchOne().into(int.class);
+  }
+
+  /**
+   * MUST NOT ACCEPT SECRETS - Package private so that secrets are not accidentally passed in. Should
+   * only be called from { @link SecretsRepositoryWriter }
+   *
+   * Takes as inputs configurations that it then uses to overwrite the contents of the existing Config
+   * Database.
+   *
+   * @param configs - configurations to load.
+   * @param dryRun - whether to test run of the load
+   * @throws IOException - you never know when you IO.
+   */
+  void replaceAllConfigsNoSecrets(final Map<AirbyteConfig, Stream<?>> configs, final boolean dryRun) throws IOException {
+    persistence.replaceAllConfigs(configs, dryRun);
+  }
+
+  /**
+   * Dumps all configurations in the Config Database. Note: It will not contain secrets as the Config
+   * Database does not contain connector configurations that include secrets. In order to hydrate with
+   * secrets see { @link SecretsRepositoryReader#dumpConfigs() }.
+   *
+   * @return all configurations in the Config Database
+   * @throws IOException - you never know when you IO
+   */
+  public Map<String, Stream<JsonNode>> dumpConfigsNoSecrets() throws IOException {
+    return persistence.dumpConfigs();
+  }
+
+  /**
+   * MUST NOT ACCEPT SECRETS - Package private so that secrets are not accidentally passed in. Should
+   * only be called from { @link SecretsRepositoryWriter }
+   *
+   * Loads all Data from a ConfigPersistence into the database.
+   *
+   * @param seedPersistenceWithoutSecrets - seed persistence WITHOUT secrets
+   * @throws IOException - you never know when you IO
+   */
+  public void loadDataNoSecrets(final ConfigPersistence seedPersistenceWithoutSecrets) throws IOException {
+    persistence.loadData(seedPersistenceWithoutSecrets);
   }
 
   /**
@@ -1194,14 +1006,6 @@ public class ConfigRepository {
       throws JsonValidationException, ConfigNotFoundException, IOException {
     final StandardSync standardSync = getStandardSync(connectionId);
     return standardSync.getCatalog();
-  }
-
-  public Geography getGeographyForConnection(final UUID connectionId) throws IOException {
-    return database.query(ctx -> ctx.select(CONNECTION.GEOGRAPHY)
-        .from(CONNECTION)
-        .where(CONNECTION.ID.eq(connectionId))
-        .limit(1))
-        .fetchOneInto(Geography.class);
   }
 
 }
